[package]
name = "tensorrt-sys"
version = "0.2.1"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"
repository = "https://github.com/mstallmo/tensorrt-rs"
description = "Low level wrapper around Nvidia's TensorRT library"

[features]
default = ["trt-515"]

trt-515 = []

trt-713 = []

[dependencies]
libc = "0.2.62"

[build-dependencies]
cmake = "0.1.41"