[package]
name = "tensorrt-sys"
version = "1.0.0"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"
repository = "https://github.com/mstallmo/tensorrt-rs"
description = "Low level wrapper around Nvidia's TensorRT library"

[dependencies]
libc = "0.*"

[build-dependencies]
cmake = "0.1"
