[package]
name = "tensorrt-rs"
version = "0.4.0"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
license = "MIT"
repository = "https://github.com/mstallmo/tensorrt-rs"
edition = "2018"
description = "Rust library for using Nvidia's TensorRT deep learning acceleration library"


[dependencies]
# Uncomment when working locally
tensorrt-sys = { path = "../tensorrt-sys" }
ndarray = "0.13"
ndarray-image = "0.2"
image = "0.23"
bitflags = "1.2"

[dev-dependencies]
lazy_static = "1.4"
