[package]
name = "tensorrt-rs"
version = "0.4.0"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
license = "MIT"
repository = "https://github.com/mstallmo/tensorrt-rs"
edition = "2018"
description = "Rust library for using Nvidia's TensorRT deep learning acceleration library"

[features]
default = ["trt-7"]

trt-5 = ["tensorrt-sys/trt-5"]

trt-6 = ["tensorrt-sys/trt-6"]

trt-7 = ["tensorrt-sys/trt-7"]


[dependencies]
# Uncomment when working locally
tensorrt-sys = { path = "../tensorrt-sys" }
# tensorrt-sys = "0.3"
tensorrt_rs_derive = { path = "../tensorrt_rs_derive" }
ndarray = "0.13"
ndarray-image = "0.2"
image = "0.23"
imageproc = "0.21.0"
bitflags = "1.2"
num-traits = "0.2.12"
num-derive = "0.3.2"

[dev-dependencies]
lazy_static = "1.4"


[[example]]
name = "onnx"
required-features = ["trt-7"]
